--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,21 +21,38 @@
     "    print(\"Cannot open video file.\")\n",
     "\n",
     "#object detection\n",
-    "object_detector = cv2.createBackgroundSubtractorMOG2()"
+    "object_detector = cv2.createBackgroundSubtractorMOG2(history = 100, varThreshold= 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "while True:\n",
     "    ret, frame = cap.read()\n",
-    "\n",
-    "    mask = object_detector.apply(frame)\n",
-    "\n",
     "    \n",
+    "    #region of interest\n",
+    "    height, width, _ = frame.shape\n",
+    "    #print(height, width)\n",
+    "    roi = frame[100:720, 500:1250]\n",
+    "    \n",
+    "    #object detection\n",
+    "    mask = object_detector.apply(roi)\n",
+    "    #cleaning mask\n",
+    "    _, mask = cv2.threshold(mask, 254, 255, cv2.THRESH_BINARY)\n",
+    "    contours, _ = cv2.findContours(mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    for cnt in contours:\n",
+    "        #calculate error, remove small elements\n",
+    "        area = cv2.contourArea(cnt)\n",
+    "        if area > 100:\n",
+    "            #cv2.drawContours(roi, [cnt], -1, (0,255,0), 2)\n",
+    "            #drawing rectangle around detected objects\n",
+    "            x, y, w, h = cv2.boundingRect(cnt)\n",
+    "            cv2.rectangle(roi, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "    \n",
+    "    cv2.imshow(\"roi\", roi)\n",
     "    cv2.imshow(\"Frame\",frame)\n",
     "    cv2.imshow(\"Mask\", mask)\n",
     "\n",
