--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,45 +35,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ellipse detection parameters\n",
+    "# blob detection\n",
     "params = cv2.SimpleBlobDetector_Params()\n",
-    "\n",
-    "#area filtering\n",
+    " \n",
+    "# area parameters\n",
     "params.filterByArea = True\n",
     "params.minArea = 100\n",
-    "\n",
-    "#circle filtering\n",
+    " \n",
+    "# circular parameters\n",
     "params.filterByCircularity = True\n",
     "params.minCircularity = 0.9\n",
-    "\n",
-    "#convexity parameters\n",
+    " \n",
+    "# convexity parameters\n",
     "params.filterByConvexity = True\n",
     "params.minConvexity = 0.2\n",
-    "\n",
-    "#inertia parameters\n",
+    "     \n",
+    "# inertia parameters\n",
     "params.filterByInertia = True\n",
     "params.minInertiaRatio = 0.01\n",
-    "\n",
-    "#create detector\n",
-    "detector = cv2.SimpleBlobDetector_create(params)\n",
-    "\n"
+    " \n",
+    "# Create a detector with the parameters\n",
+    "detector = cv2.SimpleBlobDetector_create(params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
+     "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W2sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m\"\u001b[39m\u001b[39mMask\u001b[39m\u001b[39m\"\u001b[39m, mask)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W2sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m\"\u001b[39m\u001b[39mblobs\u001b[39m\u001b[39m\"\u001b[39m, blobs)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W2sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m key \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mwaitKey(\u001b[39m120\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W2sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39mif\u001b[39;00m key \u001b[39m==\u001b[39m \u001b[39m27\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W2sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -88,6 +90,7 @@
     "    \n",
     "    #object detection\n",
     "    mask = object_detector.apply(roi)\n",
+    "\n",
     "    #cleaning mask\n",
     "    _, mask = cv2.threshold(mask, 254, 255, cv2.THRESH_BINARY)\n",
     "    contours, _ = cv2.findContours(mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
@@ -100,6 +103,7 @@
     "            x, y, w, h = cv2.boundingRect(cnt)\n",
     "            cv2.rectangle(roi, (x, y), (x + w, y + h), (0,255,0),3)\n",
     "    \n",
+    "    #blob detection\n",
     "    keypoints = detector.detect(roi)\n",
     "    blank = np.zeros((1, 1))\n",
     "    blobs = cv2.drawKeypoints(roi, keypoints, blank, (0, 0, 255),\n",
@@ -112,8 +116,7 @@
     "    cv2.imshow(\"roi\", roi)\n",
     "    cv2.imshow(\"Frame\",frame)\n",
     "    cv2.imshow(\"Mask\", mask)\n",
-    "    cv2.imshow(\"Filtering Circular Blobs Only\", blobs)\n",
-    "\n",
+    "    cv2.imshow(\"blobs\", blobs)\n",
     "    key = cv2.waitKey(120)\n",
     "    if key == 27:\n",
     "        break\n",
