cant figure out correct ellipse params

--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,19 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "#open video\n",
     "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/Matt_side3_720.mov')\n",
+    "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
     "if cap.isOpened() == False:\n",
     "    print(\"Cannot open video file.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,19 +45,26 @@
     " \n",
     "# area parameters\n",
     "params.filterByArea = True\n",
-    "params.minArea = 100\n",
+    "params.minArea = 200\n",
     " \n",
     "# circular parameters\n",
     "params.filterByCircularity = True\n",
-    "params.minCircularity = 0.9\n",
+    "params.minCircularity = 0.1\n",
+    "#params.maxCircularity = 0.7\n",
     " \n",
     "# convexity parameters\n",
     "params.filterByConvexity = True\n",
-    "params.minConvexity = 0.2\n",
+    "params.minConvexity = 0.01\n",
+    "#params.maxConvexity = 0.7\n",
+    "\n",
     "     \n",
     "# inertia parameters\n",
     "params.filterByInertia = True\n",
     "params.minInertiaRatio = 0.01\n",
+    "\n",
+    "#params.maxInertiaRatio = 0.1\n",
+    "\n",
+    "\n",
     " \n",
     "# Create a detector with the parameters\n",
     "detector = cv2.SimpleBlobDetector_create(params)"
@@ -64,21 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W2sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m\"\u001b[39m\u001b[39mMask\u001b[39m\u001b[39m\"\u001b[39m, mask)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W2sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m\"\u001b[39m\u001b[39mblobs\u001b[39m\u001b[39m\"\u001b[39m, blobs)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W2sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m key \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mwaitKey(\u001b[39m120\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W2sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39mif\u001b[39;00m key \u001b[39m==\u001b[39m \u001b[39m27\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W2sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "    ret, frame = cap.read()\n",
@@ -94,6 +90,7 @@
     "    #cleaning mask\n",
     "    _, mask = cv2.threshold(mask, 254, 255, cv2.THRESH_BINARY)\n",
     "    contours, _ = cv2.findContours(mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    \n",
     "    for cnt in contours:\n",
     "        #calculate error, remove small elements\n",
     "        area = cv2.contourArea(cnt)\n",
@@ -104,9 +101,9 @@
     "            cv2.rectangle(roi, (x, y), (x + w, y + h), (0,255,0),3)\n",
     "    \n",
     "    #blob detection\n",
-    "    keypoints = detector.detect(roi)\n",
+    "    keypoints = detector.detect(mask)\n",
     "    blank = np.zeros((1, 1))\n",
-    "    blobs = cv2.drawKeypoints(roi, keypoints, blank, (0, 0, 255),\n",
+    "    blobs = cv2.drawKeypoints(mask, keypoints, blank, (0, 0, 255),\n",
     "                          cv2.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
     "    number_of_blobs = len(keypoints)\n",
     "    text = \"Number of Circular Blobs: \" + str(len(keypoints))\n",
@@ -114,9 +111,10 @@
     "            cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
     "\n",
     "    cv2.imshow(\"roi\", roi)\n",
-    "    cv2.imshow(\"Frame\",frame)\n",
+    "    #cv2.imshow(\"Frame\",frame)\n",
     "    cv2.imshow(\"Mask\", mask)\n",
     "    cv2.imshow(\"blobs\", blobs)\n",
+    "    \n",
     "    key = cv2.waitKey(120)\n",
     "    if key == 27:\n",
     "        break\n",
