still messing with ellipse detection

--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,26 +26,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#object detection parameters\n",
-    "object_detector = cv2.createBackgroundSubtractorMOG2(history = 100, varThreshold= 50)"
+    "object_detector = cv2.createBackgroundSubtractorMOG2(history = 100, varThreshold= 75)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# blob detection\n",
     "params = cv2.SimpleBlobDetector_Params()\n",
     " \n",
+    "#threshold\n",
+    "params.minThreshold = 10;\n",
+    "params.maxThreshold = 200; \n",
     "# area parameters\n",
     "params.filterByArea = True\n",
-    "params.minArea = 200\n",
+    "params.minArea = 50\n",
     " \n",
     "# circular parameters\n",
     "params.filterByCircularity = True\n",
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +113,9 @@
     "    cv2.putText(blobs, text, (20, 550),\n",
     "            cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
     "\n",
-    "    cv2.imshow(\"roi\", roi)\n",
+    "    #cv2.imshow(\"roi\", roi)\n",
     "    #cv2.imshow(\"Frame\",frame)\n",
-    "    cv2.imshow(\"Mask\", mask)\n",
+    "    #cv2.imshow(\"Mask\", mask)\n",
     "    cv2.imshow(\"blobs\", blobs)\n",
     "    \n",
     "    key = cv2.waitKey(120)\n",
