side ellipse detection not working

--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,30 +13,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "#open video\n",
-    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/Matt_side3_720.mov')\n",
+    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/Matt_Side3_720.mov')\n",
     "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
+    "\n",
     "if cap.isOpened() == False:\n",
     "    print(\"Cannot open video file.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#object detection parameters\n",
-    "object_detector = cv2.createBackgroundSubtractorMOG2(history = 100, varThreshold= 75)"
+    "#saving output\n",
+    "frame_width = int(cap.get(3))\n",
+    "frame_height = int(cap.get(4))\n",
+    "size = (620, 750)\n",
+    "output = cv2.VideoWriter('output.avi', cv2.VideoWriter_fourcc('m','p','4','v'), 10, size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#object detection parameters\n",
+    "object_detector = cv2.createBackgroundSubtractorMOG2(history = 100, varThreshold= 90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,22 +62,22 @@
     "params.maxThreshold = 200; \n",
     "# area parameters\n",
     "params.filterByArea = True\n",
-    "params.minArea = 50\n",
+    "params.minArea = 100\n",
     " \n",
     "# circular parameters\n",
     "params.filterByCircularity = True\n",
-    "params.minCircularity = 0.1\n",
+    "params.minCircularity = 0.2\n",
     "#params.maxCircularity = 0.7\n",
     " \n",
     "# convexity parameters\n",
     "params.filterByConvexity = True\n",
-    "params.minConvexity = 0.01\n",
+    "params.minConvexity = 0.2\n",
     "#params.maxConvexity = 0.7\n",
     "\n",
     "     \n",
     "# inertia parameters\n",
     "params.filterByInertia = True\n",
-    "params.minInertiaRatio = 0.01\n",
+    "params.minInertiaRatio = 0.1\n",
     "\n",
     "#params.maxInertiaRatio = 0.1\n",
     "\n",
@@ -75,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,11 +127,11 @@
     "    cv2.putText(blobs, text, (20, 550),\n",
     "            cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
     "\n",
-    "    #cv2.imshow(\"roi\", roi)\n",
+    "    cv2.imshow(\"roi\", roi)\n",
     "    #cv2.imshow(\"Frame\",frame)\n",
     "    #cv2.imshow(\"Mask\", mask)\n",
     "    cv2.imshow(\"blobs\", blobs)\n",
-    "    \n",
+    "    output.write(roi)\n",
     "    key = cv2.waitKey(120)\n",
     "    if key == 27:\n",
     "        break\n",
