--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#open video\n",
-    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/Matt_Side3_720.mov')\n",
+    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/Overhead_Trial_2.mp4')\n",
     "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
     "\n",
     "if cap.isOpened() == False:\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,18 +66,18 @@
     " \n",
     "# circular parameters\n",
     "params.filterByCircularity = True\n",
-    "params.minCircularity = 0.2\n",
+    "params.minCircularity = 0.02\n",
     "#params.maxCircularity = 0.7\n",
     " \n",
     "# convexity parameters\n",
     "params.filterByConvexity = True\n",
-    "params.minConvexity = 0.2\n",
+    "params.minConvexity = 0.02\n",
     "#params.maxConvexity = 0.7\n",
     "\n",
     "     \n",
     "# inertia parameters\n",
     "params.filterByInertia = True\n",
-    "params.minInertiaRatio = 0.1\n",
+    "params.minInertiaRatio = 0.01\n",
     "\n",
     "#params.maxInertiaRatio = 0.1\n",
     "\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,10 +99,10 @@
     "    #region of interest\n",
     "    height, width, _ = frame.shape\n",
     "    #print(height, width)\n",
-    "    roi = frame[100:720, 500:1250]\n",
+    "    roi = frame[400:500, 200:1000]\n",
     "    \n",
     "    #object detection\n",
-    "    mask = object_detector.apply(roi)\n",
+    "    mask = object_detector.apply(frame)\n",
     "\n",
     "    #cleaning mask\n",
     "    _, mask = cv2.threshold(mask, 254, 255, cv2.THRESH_BINARY)\n",
@@ -115,12 +115,12 @@
     "            #cv2.drawContours(roi, [cnt], -1, (0,255,0), 2)\n",
     "            #drawing rectangle around detected objects\n",
     "            x, y, w, h = cv2.boundingRect(cnt)\n",
-    "            cv2.rectangle(roi, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
     "    \n",
     "    #blob detection\n",
-    "    keypoints = detector.detect(mask)\n",
+    "    keypoints = detector.detect(frame)\n",
     "    blank = np.zeros((1, 1))\n",
-    "    blobs = cv2.drawKeypoints(mask, keypoints, blank, (0, 0, 255),\n",
+    "    blobs = cv2.drawKeypoints(frame, keypoints, blank, (0, 0, 255),\n",
     "                          cv2.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
     "    number_of_blobs = len(keypoints)\n",
     "    text = \"Number of Circular Blobs: \" + str(len(keypoints))\n",
@@ -128,7 +128,7 @@
     "            cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
     "\n",
     "    cv2.imshow(\"roi\", roi)\n",
-    "    #cv2.imshow(\"Frame\",frame)\n",
+    "    cv2.imshow(\"Frame\",frame)\n",
     "    #cv2.imshow(\"Mask\", mask)\n",
     "    cv2.imshow(\"blobs\", blobs)\n",
     "    output.write(roi)\n",
