able to save video to computer

--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#open video\n",
-    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/Overhead_Trial_2.mp4')\n",
+    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/gopro_overhead_trim.mp4')\n",
     "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
     "\n",
     "if cap.isOpened() == False:\n",
@@ -27,20 +27,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1080, 1920)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "OpenCV: FFMPEG: tag 0x5634504d/'MP4V' is not supported with codec id 12 and format 'mp4 / MP4 (MPEG-4 Part 14)'\n",
+      "OpenCV: FFMPEG: fallback to use tag 0x7634706d/'mp4v'\n"
+     ]
+    }
+   ],
    "source": [
     "#saving output\n",
     "frame_width = int(cap.get(3))\n",
     "frame_height = int(cap.get(4))\n",
-    "size = (620, 750)\n",
-    "output = cv2.VideoWriter('output.avi', cv2.VideoWriter_fourcc('m','p','4','v'), 10, size)"
+    "size = (frame_width, frame_height)\n",
+    "print(size)\n",
+    "output = cv2.VideoWriter('output.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1080,1920))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,17 +106,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.6.0) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m keypoints \u001b[39m=\u001b[39m detector\u001b[39m.\u001b[39mdetect(frame)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m blank \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m blobs \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mdrawKeypoints(frame, keypoints, blank, (\u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m, \u001b[39m255\u001b[39;49m),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m                       cv2\u001b[39m.\u001b[39;49mDRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m number_of_blobs \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(keypoints)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m text \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mNumber of Circular Blobs: \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(\u001b[39mlen\u001b[39m(keypoints))\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.6.0) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    ret, frame = cap.read()\n",
     "    \n",
     "    #region of interest\n",
-    "    height, width, _ = frame.shape\n",
+    "    #height, width, _ = frame.shape\n",
     "    #print(height, width)\n",
-    "    roi = frame[400:500, 200:1000]\n",
+    "    #roi = frame[130:1800, 200:500]\n",
     "    \n",
     "    #object detection\n",
     "    mask = object_detector.apply(frame)\n",
@@ -115,7 +144,13 @@
     "            #cv2.drawContours(roi, [cnt], -1, (0,255,0), 2)\n",
     "            #drawing rectangle around detected objects\n",
     "            x, y, w, h = cv2.boundingRect(cnt)\n",
+    "            #print(x, y)\n",
     "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "            #cv2.ellipse(frame,(x+w, y + h),)\n",
+    "            speed = [x, y]\n",
+    "            # print(speed)\n",
+    "            #text = str(label+1)\n",
+    "            #cv2.putText(frame, text,(20,550),cv2.FONT_HERSHEY_PLAIN,1,(255, 0, 10),3)\n",
     "    \n",
     "    #blob detection\n",
     "    keypoints = detector.detect(frame)\n",
@@ -127,16 +162,17 @@
     "    cv2.putText(blobs, text, (20, 550),\n",
     "            cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
     "\n",
-    "    cv2.imshow(\"roi\", roi)\n",
+    "    #cv2.imshow(\"roi\", roi)\n",
     "    cv2.imshow(\"Frame\",frame)\n",
     "    #cv2.imshow(\"Mask\", mask)\n",
-    "    cv2.imshow(\"blobs\", blobs)\n",
-    "    output.write(roi)\n",
+    "    #cv2.imshow(\"blobs\", blobs)\n",
+    "    output.write(frame)\n",
     "    key = cv2.waitKey(120)\n",
     "    if key == 27:\n",
     "        break\n",
-    "\n",
+    "#print(height, width)\n",
     "cap.release()\n",
+    "output.release()\n",
     "cv2.destroyAllWindows()"
    ]
   }
