--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "#open video\n",
-    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/gopro_overhead_trim.mp4')\n",
+    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/Daniel_7_top_trim.mp4')\n",
     "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
     "\n",
     "if cap.isOpened() == False:\n",
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1080, 1920)\n"
+      "(1920, 1080)\n"
      ]
     },
     {
@@ -57,17 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "#object detection parameters\n",
-    "object_detector = cv2.createBackgroundSubtractorMOG2(history = 100, varThreshold= 90)"
+    "object_detector = cv2.createBackgroundSubtractorMOG2(history = 100, varThreshold= 70)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,18 +106,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "error",
-     "evalue": "OpenCV(4.6.0) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m keypoints \u001b[39m=\u001b[39m detector\u001b[39m.\u001b[39mdetect(frame)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m blank \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m blobs \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mdrawKeypoints(frame, keypoints, blank, (\u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m, \u001b[39m255\u001b[39;49m),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m                       cv2\u001b[39m.\u001b[39;49mDRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m number_of_blobs \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(keypoints)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m text \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mNumber of Circular Blobs: \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(\u001b[39mlen\u001b[39m(keypoints))\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.6.0) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n",
+      "1080 1920\n"
      ]
     }
    ],
@@ -126,9 +160,9 @@
     "    ret, frame = cap.read()\n",
     "    \n",
     "    #region of interest\n",
-    "    #height, width, _ = frame.shape\n",
-    "    #print(height, width)\n",
-    "    #roi = frame[130:1800, 200:500]\n",
+    "    height, width, _ = frame.shape\n",
+    "    print(height, width)\n",
+    "    roi = frame[200:900, 100:1800]\n",
     "    \n",
     "    #object detection\n",
     "    mask = object_detector.apply(frame)\n",
@@ -141,32 +175,32 @@
     "        #calculate error, remove small elements\n",
     "        area = cv2.contourArea(cnt)\n",
     "        if area > 100:\n",
-    "            #cv2.drawContours(roi, [cnt], -1, (0,255,0), 2)\n",
+    "            cv2.drawContours(roi, [cnt], -1, (0,255,0), 2)\n",
     "            #drawing rectangle around detected objects\n",
     "            x, y, w, h = cv2.boundingRect(cnt)\n",
     "            #print(x, y)\n",
-    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "            cv2.rectangle(roi, (x, y), (x + w, y + h), (0,255,0),3)\n",
     "            #cv2.ellipse(frame,(x+w, y + h),)\n",
     "            speed = [x, y]\n",
     "            # print(speed)\n",
-    "            #text = str(label+1)\n",
-    "            #cv2.putText(frame, text,(20,550),cv2.FONT_HERSHEY_PLAIN,1,(255, 0, 10),3)\n",
+    "            # text = str(label+1)\n",
+    "            # cv2.putText(frame, text,(20,550),cv2.FONT_HERSHEY_PLAIN,1,(255, 0, 10),3)\n",
     "    \n",
     "    #blob detection\n",
-    "    keypoints = detector.detect(frame)\n",
-    "    blank = np.zeros((1, 1))\n",
-    "    blobs = cv2.drawKeypoints(frame, keypoints, blank, (0, 0, 255),\n",
-    "                          cv2.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
-    "    number_of_blobs = len(keypoints)\n",
-    "    text = \"Number of Circular Blobs: \" + str(len(keypoints))\n",
-    "    cv2.putText(blobs, text, (20, 550),\n",
-    "            cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
+    "    # keypoints = detector.detect(frame)\n",
+    "    # blank = np.zeros((1, 1))\n",
+    "    # blobs = cv2.drawKeypoints(frame, keypoints, blank, (0, 0, 255),\n",
+    "    #                       cv2.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
+    "    # number_of_blobs = len(keypoints)\n",
+    "    # text = \"Number of Circular Blobs: \" + str(len(keypoints))\n",
+    "    # cv2.putText(blobs, text, (20, 550),\n",
+    "    #         cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
     "\n",
-    "    #cv2.imshow(\"roi\", roi)\n",
-    "    cv2.imshow(\"Frame\",frame)\n",
+    "    cv2.imshow(\"roi\", roi)\n",
+    "    # cv2.imshow(\"Frame\",frame)\n",
     "    #cv2.imshow(\"Mask\", mask)\n",
-    "    #cv2.imshow(\"blobs\", blobs)\n",
-    "    output.write(frame)\n",
+    "    # cv2.imshow(\"blobs\", blobs)\n",
+    "    # output.write(frame)\n",
     "    key = cv2.waitKey(120)\n",
     "    if key == 27:\n",
     "        break\n",
