--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -52,12 +52,12 @@
     "frame_height = int(cap.get(4))\n",
     "size = (frame_width, frame_height)\n",
     "print(size)\n",
-    "output = cv2.VideoWriter('output.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1080,1920))"
+    "output = cv2.VideoWriter('output.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1920,1080))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,52 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n",
-      "1080 1920\n"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m ret, frame \u001b[39m=\u001b[39m cap\u001b[39m.\u001b[39mread()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X23sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#region of interest\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X23sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m height, width, _ \u001b[39m=\u001b[39m frame\u001b[39m.\u001b[39;49mshape\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X23sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# print(height, width)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X23sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m roi \u001b[39m=\u001b[39m frame[\u001b[39m200\u001b[39m:\u001b[39m900\u001b[39m, \u001b[39m100\u001b[39m:\u001b[39m1800\u001b[39m]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
      ]
     }
    ],
@@ -161,7 +127,7 @@
     "    \n",
     "    #region of interest\n",
     "    height, width, _ = frame.shape\n",
-    "    print(height, width)\n",
+    "    # print(height, width)\n",
     "    roi = frame[200:900, 100:1800]\n",
     "    \n",
     "    #object detection\n",
@@ -175,13 +141,13 @@
     "        #calculate error, remove small elements\n",
     "        area = cv2.contourArea(cnt)\n",
     "        if area > 100:\n",
-    "            cv2.drawContours(roi, [cnt], -1, (0,255,0), 2)\n",
+    "            # cv2.drawContours(roi, [cnt], -1, (0,255,0), 2)\n",
     "            #drawing rectangle around detected objects\n",
     "            x, y, w, h = cv2.boundingRect(cnt)\n",
     "            #print(x, y)\n",
-    "            cv2.rectangle(roi, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
     "            #cv2.ellipse(frame,(x+w, y + h),)\n",
-    "            speed = [x, y]\n",
+    "            # speed = [x, y]\n",
     "            # print(speed)\n",
     "            # text = str(label+1)\n",
     "            # cv2.putText(frame, text,(20,550),cv2.FONT_HERSHEY_PLAIN,1,(255, 0, 10),3)\n",
@@ -196,11 +162,11 @@
     "    # cv2.putText(blobs, text, (20, 550),\n",
     "    #         cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
     "\n",
-    "    cv2.imshow(\"roi\", roi)\n",
-    "    # cv2.imshow(\"Frame\",frame)\n",
+    "    # cv2.imshow(\"roi\", roi)\n",
+    "    cv2.imshow(\"Frame\",frame)\n",
     "    #cv2.imshow(\"Mask\", mask)\n",
     "    # cv2.imshow(\"blobs\", blobs)\n",
-    "    # output.write(frame)\n",
+    "    output.write(frame)\n",
     "    key = cv2.waitKey(120)\n",
     "    if key == 27:\n",
     "        break\n",
