trying to add coordinates to array

--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,8 @@
      "output_type": "stream",
      "text": [
       "OpenCV: FFMPEG: tag 0x5634504d/'MP4V' is not supported with codec id 12 and format 'mp4 / MP4 (MPEG-4 Part 14)'\n",
+      "OpenCV: FFMPEG: fallback to use tag 0x7634706d/'mp4v'\n",
+      "OpenCV: FFMPEG: tag 0x5634504d/'MP4V' is not supported with codec id 12 and format 'mp4 / MP4 (MPEG-4 Part 14)'\n",
       "OpenCV: FFMPEG: fallback to use tag 0x7634706d/'mp4v'\n"
      ]
     }
@@ -52,22 +54,23 @@
     "frame_height = int(cap.get(4))\n",
     "size = (frame_width, frame_height)\n",
     "print(size)\n",
-    "output = cv2.VideoWriter('output.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1920,1080))"
+    "output = cv2.VideoWriter('output.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1920,1080))\n",
+    "output2 = cv2.VideoWriter('output2.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1920,1080))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "#object detection parameters\n",
-    "object_detector = cv2.createBackgroundSubtractorMOG2(history = 100, varThreshold= 70)"
+    "object_detector = cv2.createBackgroundSubtractorMOG2(history = 100, varThreshold= 90)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,21 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m ret, frame \u001b[39m=\u001b[39m cap\u001b[39m.\u001b[39mread()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X23sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#region of interest\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X23sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m height, width, _ \u001b[39m=\u001b[39m frame\u001b[39m.\u001b[39;49mshape\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X23sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# print(height, width)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#X23sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m roi \u001b[39m=\u001b[39m frame[\u001b[39m200\u001b[39m:\u001b[39m900\u001b[39m, \u001b[39m100\u001b[39m:\u001b[39m1800\u001b[39m]\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "    ret, frame = cap.read()\n",
@@ -153,26 +144,28 @@
     "            # cv2.putText(frame, text,(20,550),cv2.FONT_HERSHEY_PLAIN,1,(255, 0, 10),3)\n",
     "    \n",
     "    #blob detection\n",
-    "    # keypoints = detector.detect(frame)\n",
-    "    # blank = np.zeros((1, 1))\n",
-    "    # blobs = cv2.drawKeypoints(frame, keypoints, blank, (0, 0, 255),\n",
-    "    #                       cv2.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
-    "    # number_of_blobs = len(keypoints)\n",
-    "    # text = \"Number of Circular Blobs: \" + str(len(keypoints))\n",
-    "    # cv2.putText(blobs, text, (20, 550),\n",
-    "    #         cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
+    "    keypoints = detector.detect(frame)\n",
+    "    blank = np.zeros((1, 1))\n",
+    "    blobs = cv2.drawKeypoints(frame, keypoints, blank, (0, 0, 255),\n",
+    "                          cv2.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
+    "    number_of_blobs = len(keypoints)\n",
+    "    text = \"Number of Circular Blobs: \" + str(len(keypoints))\n",
+    "    cv2.putText(blobs, text, (20, 550),\n",
+    "            cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
     "\n",
     "    # cv2.imshow(\"roi\", roi)\n",
     "    cv2.imshow(\"Frame\",frame)\n",
-    "    #cv2.imshow(\"Mask\", mask)\n",
-    "    # cv2.imshow(\"blobs\", blobs)\n",
+    "    cv2.imshow(\"Mask\", mask)\n",
+    "    cv2.imshow(\"blobs\", blobs)\n",
     "    output.write(frame)\n",
+    "    output2.write(mask)\n",
     "    key = cv2.waitKey(120)\n",
     "    if key == 27:\n",
     "        break\n",
     "#print(height, width)\n",
     "cap.release()\n",
     "output.release()\n",
+    "output2.release()\n",
     "cv2.destroyAllWindows()"
    ]
   }
