thresholding by color

--- a/image_tracking.ipynb
+++ b/image_tracking.ipynb
@@ -2,18 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 214,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#import packages\n",
     "import numpy as np\n",
-    "import cv2"
+    "import cv2\n",
+    "cv2.startWindowThread()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1920, 1080)\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -53,14 +58,14 @@
     "frame_width = int(cap.get(3))\n",
     "frame_height = int(cap.get(4))\n",
     "size = (frame_width, frame_height)\n",
-    "print(size)\n",
+    "#print(size)\n",
     "output = cv2.VideoWriter('output.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1920,1080))\n",
     "output2 = cv2.VideoWriter('output2.mp4', cv2.VideoWriter_fourcc(*'MP4V'), 20.0, (1920,1080))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,63 +75,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# blob detection\n",
-    "params = cv2.SimpleBlobDetector_Params()\n",
-    " \n",
-    "#threshold\n",
-    "params.minThreshold = 10;\n",
-    "params.maxThreshold = 200; \n",
-    "# area parameters\n",
-    "params.filterByArea = True\n",
-    "params.minArea = 100\n",
-    " \n",
-    "# circular parameters\n",
-    "params.filterByCircularity = True\n",
-    "params.minCircularity = 0.02\n",
-    "#params.maxCircularity = 0.7\n",
-    " \n",
-    "# convexity parameters\n",
-    "params.filterByConvexity = True\n",
-    "params.minConvexity = 0.02\n",
-    "#params.maxConvexity = 0.7\n",
+    "#creating empty array\n",
+    "arr = np.empty((0,4))\n",
     "\n",
-    "     \n",
-    "# inertia parameters\n",
-    "params.filterByInertia = True\n",
-    "params.minInertiaRatio = 0.01\n",
+    "#defining rgb range\n",
     "\n",
-    "#params.maxInertiaRatio = 0.1\n",
-    "\n",
-    "\n",
-    " \n",
-    "# Create a detector with the parameters\n",
-    "detector = cv2.SimpleBlobDetector_create(params)"
+    "lower_color_bound = np.array([0,100,178])\n",
+    "upper_color_bound = np.array([255,255,255])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 219,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m ret, frame \u001b[39m=\u001b[39m cap\u001b[39m.\u001b[39mread()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#region of interest\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m height, width, _ \u001b[39m=\u001b[39m frame\u001b[39m.\u001b[39;49mshape\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m roi \u001b[39m=\u001b[39m frame[\u001b[39m200\u001b[39m:\u001b[39m900\u001b[39m, \u001b[39m100\u001b[39m:\u001b[39m1800\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/image_tracking.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m#object detection\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    ret, frame = cap.read()\n",
     "    \n",
     "    #region of interest\n",
     "    height, width, _ = frame.shape\n",
-    "    # print(height, width)\n",
     "    roi = frame[200:900, 100:1800]\n",
     "    \n",
     "    #object detection\n",
-    "    mask = object_detector.apply(frame)\n",
+    "    mask = object_detector.apply(roi)\n",
     "\n",
     "    #cleaning mask\n",
     "    _, mask = cv2.threshold(mask, 254, 255, cv2.THRESH_BINARY)\n",
     "    contours, _ = cv2.findContours(mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    #trying rgb threshold\n",
+    "    mask = cv2.cvtColor(roi,cv2.COLOR_BGR2HSV) \n",
+    "    mask_rgb = cv2.inRange(mask,lower_color_bound,upper_color_bound)\n",
+    "    rgb_contours, _ = cv2.findContours(mask_rgb, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "       \n",
     "    \n",
     "    for cnt in contours:\n",
     "        #calculate error, remove small elements\n",
@@ -135,38 +133,59 @@
     "            # cv2.drawContours(roi, [cnt], -1, (0,255,0), 2)\n",
     "            #drawing rectangle around detected objects\n",
     "            x, y, w, h = cv2.boundingRect(cnt)\n",
-    "            #print(x, y)\n",
-    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0,255,0),3)\n",
-    "            #cv2.ellipse(frame,(x+w, y + h),)\n",
-    "            # speed = [x, y]\n",
-    "            # print(speed)\n",
-    "            # text = str(label+1)\n",
-    "            # cv2.putText(frame, text,(20,550),cv2.FONT_HERSHEY_PLAIN,1,(255, 0, 10),3)\n",
-    "    \n",
-    "    #blob detection\n",
-    "    keypoints = detector.detect(frame)\n",
-    "    blank = np.zeros((1, 1))\n",
-    "    blobs = cv2.drawKeypoints(frame, keypoints, blank, (0, 0, 255),\n",
-    "                          cv2.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
-    "    number_of_blobs = len(keypoints)\n",
-    "    text = \"Number of Circular Blobs: \" + str(len(keypoints))\n",
-    "    cv2.putText(blobs, text, (20, 550),\n",
-    "            cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 100, 255), 2)\n",
+    "            if (x > 200 and x < 900 and y > 100 and y < 1800):\n",
+    "                 #print(x, y, (x+w), (y+h))\n",
+    "                 np.append(arr, (x, y, x + w, y + h))\n",
+    "                 #print(arr)\n",
+    "            cv2.rectangle(roi, (x, y), (x + w, y + h), (0,255,0),3)\n",
     "\n",
-    "    # cv2.imshow(\"roi\", roi)\n",
-    "    cv2.imshow(\"Frame\",frame)\n",
+    "    for cnt in rgb_contours:\n",
+    "        #calculate error, remove small elements\n",
+    "        area = cv2.contourArea(cnt)\n",
+    "        if area > 100:\n",
+    "            cv2.drawContours(mask_rgb, [cnt], -1, (0,255,0), 2)\n",
+    "            #drawing rectangle around detected objects\n",
+    "            x, y, w, h = cv2.boundingRect(cnt)\n",
+    "            if (x > 200 and x < 900 and y > 100 and y < 1800):\n",
+    "                 #print(x, y, (x+w), (y+h))\n",
+    "                 np.append(arr, (x, y, x + w, y + h))\n",
+    "                 #print(arr)\n",
+    "            cv2.rectangle(mask_rgb, (x, y), (x + w, y + h), (0,255,0),3)\n",
+    "\n",
+    "    cv2.imshow(\"roi\", roi)\n",
+    "    #cv2.imshow(\"Frame\",frame)\n",
     "    cv2.imshow(\"Mask\", mask)\n",
-    "    cv2.imshow(\"blobs\", blobs)\n",
+    "    #cv2.imshow(\"blobs\", blobs)\n",
+    "    cv2.imshow(\"maskrgb\",mask_rgb)\n",
+    "    \n",
     "    output.write(frame)\n",
-    "    output2.write(mask)\n",
-    "    key = cv2.waitKey(120)\n",
-    "    if key == 27:\n",
+    "    #output2.write(mask)\n",
+    "    if cv2.waitKey(120) & 0xFF == ord('q'):\n",
     "        break\n",
+    "\n",
     "#print(height, width)\n",
     "cap.release()\n",
     "output.release()\n",
     "output2.release()\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n",
+    "#cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)"
    ]
   }
  ],
